@@ -1,5 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 11/17/2013 ==
+demonstar55: Rewrote the Mob::_GetMovementSpeed fix an issue that arose from the change on 11/11
+	- Added the rule Character:BaseRunSpeedCap (default 158) so people can customize what their runspeed cap is. Hardcapped to 225 so stuff doesn't get too crazy.
+
 == 11/16/2013 ==
 Leere: Fixed the drinking message for auto-consume, it will again correctly show up for forced consumption instead.
 demonstar55: Added Mob::DoCastingChecks() which will check for various fail conditions while the casting bar is up. This is called after Mob::DoCastSpell() starts the casting and before it returns.
